--- a/index.html
+++ b/index.html
@@ -30,6 +30,38 @@
       </div>
     </nav>
 
+    <!-- Hero Section -->
+    <div class="main">
+      <div class="main__container">
+        <div class="main__content">
+          <h1>DECK</h1>
+          <h2>Next Generation AI Technology</h2>
+          <p>Curious? See What We Do.</p>
+          <button class="main__btn"><a href="#">Get Started</a></button>
+        </div>
+        <div class="main__img--container">
+          <img id="main__img" src="images/pic1.svg" />
+        </div>
+      </div>
+    </div>
+
+    <!-- Services Section -->
+    <div class="services">
+      <h1>See What We Have To Offer</h1>
+      <div class="services__container">
+        <div class="services__card">
+          <h2>Experience the influence</h2>
+          <p>AI Powered technology</p>
+          <button>Get Started</button>
+        </div>
+        <div class="services__card">
+          <h2>Are you Ready?</h2>
+          <p>Join Us</p>
+          <button>Get Started</button>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer Section -->
     <div class="footer__container">
       <div class="footer__links">
